--- a/projeto-sd/templates/account/login.html
+++ b/projeto-sd/templates/account/login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% load i18n %} {% block title %}{% trans "Sign In" %}{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
@@ -11,22 +13,31 @@
                 <form class="login" method="POST" action="{% url 'account_login' %}">
                     {% csrf_token %}
 
+                    {% if form.non_field_errors %}
+                    <div class="alert alert-danger">
+                        {% for error in form.non_field_errors %}
+                        <p class="mb-0">{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+
                     {% for field in form %}
-                        <div class="mb-3">
-                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                            {{ field }} {% if field.help_text %}
-                                <div class="form-text">{{ field.help_text|safe }}</div>
-                            {% endif %}
-                            {% for error in field.errors %}
-                                <div class="invalid-feedback d-block">
-                                    {{ error }}
-                                </div>
-                            {% endfor %}
+                    <div class="mb-3">
+                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                        {{ field }}
+                        {% if field.help_text %}
+                        <div class="form-text">{{ field.help_text|safe }}</div>
+                        {% endif %}
+                        {% for error in field.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ error }}
                         </div>
+                        {% endfor %}
+                    </div>
                     {% endfor %}
 
                     {% if redirect_field_value %}
-                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                     {% endif %}
 
                     <div class="d-grid gap-2">
