--- a/projeto-sd/templates/account/signup.html
+++ b/projeto-sd/templates/account/signup.html
@@ -44,11 +44,11 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="{{ form.password.id_for_label }}" class="form-label">Senha</label>
+                        <label for="{{ form.password1.id_for_label }}" class="form-label">Senha</label>
                         {{ form.password1 }}
                     </div>
                     <div class="mb-3">
-                        <label for="{{ form.password2.id_for_label }}" class="form-label">{{ form.password2.label }}</label>
+                        <label for="{{ form.password2.id_for_label }}" class="form-label">Senha</label>
                         {{ form.password2 }}
                     </div>
 
