--- a/projeto-sd/templates/account/signup.html
+++ b/projeto-sd/templates/account/signup.html
@@ -39,8 +39,7 @@
               {{ form.titulacao }}
             </div>
             <div class="mb-3">
-              <label for="{{ form.area_pesquisa.id_for_label }}" class="form-label">{{ form.area_pesquisa.label
-                }}</label>
+              <label for="{{ form.area_pesquisa.id_for_label }}" class="form-label">{{ form.area_pesquisa.label }}</label>
               {{ form.area_pesquisa }}
             </div>
           </div>
